--- a/index.html
+++ b/index.html
@@ -23,112 +23,29 @@
     ); */
 
     //const container = React.createElement("div", null, [Title, Button]);
-
-    function MinutesToHours() {
-        const [amount, setAmount] = React.useState(0);
-        const [inverted, setInverted] = React.useState(false);
-        const onChange = (event) => {
-            setAmount(event.target.value); //target : 방금 바뀐input
-        }
-        const reset = () => setAmount(0);
-        const onFlip = () => {
-            reset();
-            setInverted(current => !current);
-        }
-        return (
-            <div>
-                <div>
-                    <label htmlFor="minutes">Minutes</label>
-                    <input
-                        value={inverted ? amount * 60 : amount}
-                        id="minutes"
-                        placeholder="Minutes"
-                        type="number"
-                        onChange={onChange}
-                        disabled={inverted} />
-                </div>
-                <div>
-                    <label htmlFor="hours">Hours</label>
-                    <input
-                        value={inverted ? amount : Math.round(amount / 60)}
-                        id="hours"
-                        placeholder="Hours"
-                        type="number"
-                        disabled={!inverted}
-                        onChange={onChange} />
-                    <button onClick={reset}>Reset</button>
-                    <button onClick={onFlip}>{inverted ? "Turn Back" : "Invert"}</button>
-                </div>
-            </div>
-        );
+    function Btn({ banana, big }) { // == {props.banana}
+        return <button
+            style={{
+                backgroundColor: "tomato",
+                color: "white",
+                padding: "10px 20px",
+                border: 0,
+                borderRadius: 10,
+                fontSize: big ? 18 : 16,
+            }}>
+            {banana}
+        </button>
     }
-
-    function KmToMiles() {
-
-        const [lengAmount, setLengAmount] = React.useState(0);
-        const [inverted, setInverted] = React.useState(false);
-        const onChange = (event) => {
-            setLengAmount(event.target.value);
-        }
-        const reset = () =>{
-            setLengAmount(0);
-        }
-        const onFlip = () => {
-            reset();
-            setInverted(current => !current);
-        }
-        return (
-            <div>
-                <div>
-                    <label htmlFor="km">Km</label>
-                    <input
-                        value={inverted ? lengAmount*1.609 : lengAmount }
-                        id="km"
-                        placeholder="km"
-                        type="number"
-                        onChange={onChange}
-                        disabled={inverted} />
-                </div>
-                <div>
-                    <label htmlFor="mile">Mile</label>
-                    <input
-                        value={inverted ? lengAmount : lengAmount/1.609}
-                        id="mile"
-                        placeholder="mile"
-                        type="number"
-                        onChange={onChange}
-                        disabled={!inverted} />
-                    <button onClick={reset}>Reset</button>
-                    <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
-                </div>
-
-            </div>
-        );
-    }
-
     function App() {
-        const [index, setIndex] = React.useState("xx");
-        const onSelect = (evnet) => {
-            setIndex(event.target.value);
-        }
         return (
             <div>
-                <h1>Super Convert </h1>
-                <select value={index} onChange={onSelect}>
-                    <option value="xx">Select your unit</option>
-                    <option value="0">Minutes $ Hours</option>
-                    <option value="1">Km & Miles</option>
-                </select>
-                <hr />
-                {index === "xx" ? "Please select your units" : null}
-                {index === "0" ? <MinutesToHours /> : null}
-                {index === "1" ? <KmToMiles /> : null}
+                <Btn banana="Save Changes" big={true}/>
+                <Btn banana="Continue" big={false}/>
             </div>
         );
     }
 
     ReactDOM.render(<App />, root);
-    //ReactDOM.render(span, root);
 </script>
 
 </html>
