--- a/index.html
+++ b/index.html
@@ -23,24 +23,28 @@
     ); */
 
     //const container = React.createElement("div", null, [Title, Button]);
-    function Btn({ banana, big }) { // == {props.banana}
+    function Btn({text, onClick}) { 
+        console.log(text, "was rendered");
         return <button
+        onClick={onClick}
             style={{
                 backgroundColor: "tomato",
                 color: "white",
                 padding: "10px 20px",
                 border: 0,
                 borderRadius: 10,
-                fontSize: big ? 18 : 16,
             }}>
-            {banana}
+            {text}
         </button>
     }
+    const MemorizedBtn = React.memo(Btn)
     function App() {
+        const [value, setValue] = React.useState("Save Changes");
+        const changeValue = () =>setValue("Revert Change");
         return (
             <div>
-                <Btn banana="Save Changes" big={true}/>
-                <Btn banana="Continue" big={false}/>
+                <MemorizedBtn text={value} onClick={changeValue}/>
+                <MemorizedBtn text="Continue" />
             </div>
         );
     }
