--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </body>
 <script crossorigin src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
@@ -23,28 +24,34 @@
     ); */
 
     //const container = React.createElement("div", null, [Title, Button]);
-    function Btn({text, onClick}) { 
+    function Btn({text, fontSize =12}) { 
         console.log(text, "was rendered");
         return <button
-        onClick={onClick}
+        //onClick={onClick}
             style={{
                 backgroundColor: "tomato",
                 color: "white",
                 padding: "10px 20px",
                 border: 0,
                 borderRadius: 10,
+                fontSize
             }}>
             {text}
         </button>
     }
-    const MemorizedBtn = React.memo(Btn)
+    //const MemorizedBtn = React.memo(Btn)
+    Btn.propTypes={
+        text: PropTypes.string.isRequired,
+        fontSize: PropTypes.number,        
+    }
+
     function App() {
         const [value, setValue] = React.useState("Save Changes");
         const changeValue = () =>setValue("Revert Change");
         return (
             <div>
-                <MemorizedBtn text={value} onClick={changeValue}/>
-                <MemorizedBtn text="Continue" />
+                <Btn text="Save Changes" fontSize={18} />
+                <Btn text={"Continue"} />
             </div>
         );
     }
